# tsp-genetic-algorithm

./: .breakpoints  .gitignore  2023_AI_TSP.csv  2023_AI_TSP_4606.csv  2023_AI_TSP_6386.csv  CMakeLists.txt  fitnessView.py  graphView.py  main  readme.md  searchResult.csv  view.py
.ccls-cache/@@home@runner@oriburgergenetictsp/: @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@algorithm.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@array.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@atomic.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@backward@auto_ptr.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@backward@binders.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bit.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@algorithmfwd.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@align.h.blob  (+378 more)
output/: bestRoute.csv  fitnessChange.csv  searchResult_100000_gen.csv  searchResult_150000_gen.csv  searchResult_200000_gen.csv  searchResult_250000_gen.csv  searchResult_300000_gen.csv  searchResult_350000_gen.csv  searchResult_400000_gen.csv  searchResult_450000_gen.csv  searchResult_500000_gen.csv  searchResult_50000_gen.csv  solution_#09.csv
output/etc/: random_42848.csv
source/: fileIO.cpp  fileIO.h  genetic.cpp  genetic.h  kmeans.cpp  kmeans.h  main.cpp  treeRouteFinder.cpp  treeRouteFinder.h
(+76 files in other folders)
